<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/tab_tab2_requisite_ssu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_tab2_requisite_supersu" />

        <Button
            android:id="@+id/tab_tab2_requisite_busy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_tab2_requisite_busybox" />
    </TableRow>

    <TextView
        android:id="@+id/tab_usercheck_su"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/tab_usercheck_su"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tab_usercheck_prevversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tab_usercheck_su"
        android:text="@string/tab_usercheck_prevversion"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>